Order of the logo credits was a little off

--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
 			<!-- Credits for logos -->
 		<ul id="credit"> Logo Credits
 		  <li> NPC Lookup logo by Björn Andersson of the Noun Project </li>
-		  <li>Poll Website logo by Misha of the Noun Project </li>
+		  <li>Polling logo by Misha of the Noun Project </li>
+		   <li> Tabletop logo by Andrew Doane of the Noun Project </li>
 		  <li> Weather App logo by João Proença of the Noun Project </li>
-		  <li> Clock logo by mikicon of the Noun Project </li>
+		  <li> Pomodoro logo by mikicon of the Noun Project </li>
 		  <li> Calculator logo by Ralf Schmitzer of the Noun Project </li>
-		  <li> Tabletop logo by Andrew Doane of the Noun Project </li>
+		 
 		  <li> Simon Says logo adapted from Creaticca Creative Agency of the Noun Project </li>
 		  
 		  Click Anywhere to return to safety.
