--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
     </nav>
 	<div id="aboutMeOverlay" onclick="off()">
-		<div id="aboutMeText">Hi, I'm Nicolas Crumrine and I make websites. I currently use HTML, CSS, Javascript, Angular, Express.JS and Node.JS and am working to learn other languages. I enjoy identifying, understanding, and tinkering with patterns. I like to read history, sci-fi, and Terry Prachett, drawing, rock operas, and do collaborative storytelling when I'm not building websites. <br > <br>
+		<div id="aboutMeText">Hi, I'm Nicolas Crumrine and I make websites. I currently use HTML, CSS, Javascript, Angular, Express.JS and Node.JS and am working to learn other languages. I enjoy identifying, understanding, and tinkering with patterns. I like reading history, sci-fi, and Terry Prachett, drawing, listening rock operas, and collaborative storytelling when I'm not building websites. <br > <br>
 		Visit a few of my projects and email me if you like what you see. I hope I can help. <br> <br> Click anywhere to return to safety.</div>
 	</div>
 	<div id="logoCreditsOverlay" onclick="creditsOff()">
