Reversed li and a to make it so the entire button was a link and not just the text

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 				<p> {{projectInfo.projectDescription}} </p>
 				<p> {{projectInfo.productPaper}} </p>
 				<ul id="projectLinks">
-				  <li><a href="{{projectInfo.codeLink}}" target="_blank"><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></a></li>
-				  <li><a href="{{projectInfo.websiteLink}}" target="_blank"> <i class="fa fa-external-link"> Visit Website </i> </a></li>
+				  <a href="{{projectInfo.codeLink}}" target="_blank"><li><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></li></a>
+				  <a href="{{projectInfo.websiteLink}}" target="_blank"><li> <i class="fa fa-external-link"> Visit Website </i></li> </a>
 				  <!-- <li ng-hide="projectInfo.freeCodeCampLink == null"><a href="{{projectInfo.freeCodeCampLink}}" target="_blank"> <i class="fa fa-free-code-camp"> FreeCodeCamp Challenge </i> </a></li> -->
 				</ul>
 			</div>
