--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div id="splash">
 	<span id="removeMargin" ng-repeat="project in buttons | limitTo:5">
 		<button type="image" ng-click="change(project.id)" ng-style="{'background-color': project.color}" style="position: relative;" > 
-				<img src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}">
+				 <img ng-src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}"> 
 						<p class="splashText"> {{project.title}} </p>
 			</button>
 	</span>
@@ -72,7 +72,7 @@
 	<div id="projects">
 		<!-- Select a project section -->
 		
-		<img id="projectPicture" src="{{projectInfo.picture}}" />
+		 <img id="projectPicture" ng-src="{{projectInfo.picture}}" /> 
 		<div id="projectInfoText">
 			<div id="content">
 				<h1 id="projectTitle"> {{projectInfo.title}} </h1>
@@ -97,7 +97,7 @@
 	</div>
 	<div id="projectSelectBoxes">			
 				<button type="image" class="projectSelectButton" id={{project.id}} ng-click="changeProject(project.id) || scrollTo('index')" ng-style="{'background-color': project.color}" ng-repeat="project in buttons">
-						<img src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}">
+						 <img ng-src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}"> 
 						<p class="logoText"> {{project.title}} </p>
 				</button>
 		</div>
