Removed Logo Credits due to feedback on the site saying I don't need it

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 		<div id="aboutMeText">Hi, I'm Nicolas Crumrine and I make websites. I currently use HTML, CSS, Javascript, AngularJS, Express.JS and Node.JS and am working to learn other languages. I enjoy identifying, understanding, and tinkering with patterns. I like reading history, sci-fi, and Terry Prachett, drawing, listening to rock operas, and collaborative storytelling when I'm not building websites. <br > <br>
 		Visit a few of my projects and email me if you like what you see. I hope I can help. <br> <br> Click anywhere to return to safety.</div>
 	</div>
-	<div id="logoCreditsOverlay" onclick="creditsOff()">
-			<!-- Credits for logos -->
+	<!-- Credits for logos -->
+	<!-- <div id="logoCreditsOverlay" onclick="creditsOff()">
+			
 		<ul id="credit"> Logo Credits
 		  <li> NPC Lookup logo by Björn Andersson of the Noun Project </li>
 		  <li>Polling logo by Misha of the Noun Project </li>
@@ -70,7 +71,7 @@
 		  
 		  Click Anywhere to return to safety.
 		 </ul>
-	</div>
+	</div> -->
 	<!-- Initial/Splash page -->
   <div id="splash">
 	<span id="removeMargin" ng-repeat="project in buttons | limitTo:5">
@@ -125,7 +126,7 @@
 	
     </div>
 	
-	  <button id="logoCredits" onclick="creditsOn(); off">Logo Credits</button>
+	 <!-- <button id="logoCredits" onclick="creditsOn(); off">Logo Credits</button> -->
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.6/angular.js'></script>
