Removed creditsOff function as it's no longer needed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <ul>
         <li id="nameNavContainer">
           <p id="nic"> Nicolas Crumrine </p>
-          <p id="nicJob"> Web Developer based in NYC     <button id="aboutMeButton" onclick="on(); creditsOff();">   Read More</button></p> 
+          <p id="nicJob"> Web Developer based in NYC     <button id="aboutMeButton" onclick="on()">   Read More</button></p> 
         </li>
         <li> <a href="https://github.com/CrumrineCoder" id="github" title="Github: revised projects" target="_blank">
 					<img src="Images/githubWhite.png" width="42" height="42" border="0" color="white" >
