--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 				<p> {{projectInfo.projectDescription}} </p>
 				<p> {{projectInfo.productPaper}} </p>
 				<ul id="projectLinks">
-				  <a href="{{projectInfo.codeLink}}" target="_blank"><li><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></li></a>
-				  <a href="{{projectInfo.websiteLink}}" target="_blank"><li> <i class="fa fa-external-link"> Visit Website </i></li> </a>
+				  <a href="{{projectInfo.codeLink}}" target="_blank"><li id="code-link"><i class="fa fa-code" rgb="(0,0,0)"> See Code </i></li></a>
+				  <a href="{{projectInfo.websiteLink}}" class="externalLinks" target="_blank"><li id="website-link"> <i class="fa fa-external-link"> Visit Website </i></li> </a>
 				  <!-- <li ng-hide="projectInfo.freeCodeCampLink == null"><a href="{{projectInfo.freeCodeCampLink}}" target="_blank"> <i class="fa fa-free-code-camp"> FreeCodeCamp Challenge </i> </a></li> -->
 				</ul>
 			</div>
