Link buttons made bubbly, updated about me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </ul>
     </nav>
 	<div id="aboutMeOverlay" onclick="off()">
-		<div id="aboutMeText"><h2>Hi, I'm Nicolas Crumrine and I make websites.</h2> I currently use HTML5, CSS3, Javascript, Angular, Express.JS and Node.JS and am working to learn Sass and other languages. I enjoy identifying, understanding, and tinkering with patterns. I like reading history, Russian literature, sci-fi, and Terry Prachett, doodling, listening to rock operas and western ballads, and collaborative storytelling when I'm not building websites. <br > <br>
+		<div id="aboutMeText"><h2>Hi, I'm Nicolas Crumrine and I make websites.</h2> I currently use HTML5, CSS3, Javascript, Angular, Express.JS and Node.JS and am working to learn Sass and other languages. I enjoy identifying, understanding, and tinkering with patterns. I like reading history, Russian literature, sci-fi, and Terry Prachett, doodling, listening to rock operas and western ballads, playing piano, and collaborative storytelling when I'm not building websites. <br > <br>
 		Visit a few of my projects and email me if you like what you see. I hope I can help. <br> <br> <u>Click anywhere to return to safety </u></div>
 	</div>
 	<!-- Credits for logos -->
