Moved arrow buttons to the top and given space on their own, fixed phone responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <title>Nicolas Crumrine</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> </head>
@@ -34,6 +34,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+	
 
 <body ng-app="portfolio" ng-controller="portfolioControllers">
  <nav id="nav">
