--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 
 <body ng-app="portfolio" ng-controller="portfolioControllers">
  <nav id="nav">
+ <!-- Test -->
       <ul>
         <li id="nameNavContainer">
-          <p id="nic"> Nicolas Crumrine </p>
+          <p id="nic" > Nicolas Crumrine </p>
           <p id="nicJob"> Web Developer based in NYC     <button id="aboutMeButton" onclick="on()">   Read More</button></p> 
         </li>
         <li> <a href="https://github.com/CrumrineCoder" id="github" title="Github: revised projects" target="_blank">
