HTML5 video background

--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
 	<div id="projects">
 		<!-- Select a project section -->
 		
-		 <img id="projectPicture" ng-src="{{projectInfo.picture}}" /> 
+		<!-- <img id="projectPicture" ng-src="{{projectInfo.picture}}" />  -->
+
+		<video id="projectPicture" autoplay muted loop>
+			<source src="C:\Users\Not Work\Desktop\Funny Images\nitrogen mixed with gasoline.mp4" type="video/mp4">
+			Your browser does not support HTML5 video.
+		</video>
 		
 		<div id="projectInfoText">
 		
