Toggle Info button

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<p> {{projectInfo.projectDescription}} </p>
 							<p> {{projectInfo.productPaper}} </p>
 						</div>
-						<button onclick="moreinfo()">SHOW ME! </button>
+						<button id="toggleButton" onclick="toggleInfo()" value="Show More">Toggle Info</button>
 					</div>
 					<ul id="projectLinks">
 						<a href="{{projectInfo.codeLink}}" target="_blank">
