--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<!-- <img id="projectPicture" ng-src="{{projectInfo.picture}}" />  -->
 
 			<video id="projectPicture" autoplay muted loop>
-				<source src="C:\Users\Not Work\Desktop\Funny Images\nitrogen mixed with gasoline.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+				<source src="C:\Users\NicLaptop\Videos\pjcedited.mp4" type="video/mp4"> Your browser does not support HTML5 video.
 			</video>
 
 			<div id="projectInfoText">
