--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 			<!-- Select a project section -->
 
 			<!-- <img id="projectPicture" ng-src="{{projectInfo.picture}}" />  -->
-
-			<video id="projectPicture" autoplay muted loop>
-				<source src="C:\Users\NicLaptop\Videos\pjcedited.mp4" type="video/mp4"> Your browser does not support HTML5 video.
-			</video>
-
+			<div id="video-jumbotron">
+				<video id="projectPicture" autoplay muted loop>
+					<source src="C:\Users\NicLaptop\Videos\pjcedited.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+				</video>
+			</div>
 			<div id="projectInfoText">
 
 				<div id="content">
