--- a/index.html
+++ b/index.html
@@ -112,15 +112,16 @@
 
 			<!-- <img id="projectPicture" ng-src="{{projectInfo.picture}}" />  -->
 			<div id="video-jumbotron">
-				<video id="projectPicture" autoplay muted loop>
-					<source src="C:\Users\NicLaptop\Videos\pjcedited.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+				<video id="projectPicture" autoplay muted loop src="{{projectInfo.video | trustUrl }}">
+					<source src="{{projectInfo.video | trustUrl }}" type="video/mp4"> Your browser does not support HTML5 video.
 				</video>
 			</div>
 			<div id="projectInfoText">
 
 				<div id="content">
+
 					<div id="topLeftContent">
-						<h1 id="projectTitle"> {{projectInfo.title}} </h1>
+						<h1 id="projectTitle"> {{projectInfo.Title}} </h1>
 						<div id="projectAdditionalInformation">
 							<ul>
 								<div id="projectFrontEnd">
