--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div id="content">
 
 					<div id="topLeftContent">
-						<h1 id="projectTitle"> {{projectInfo.Title}} </h1>
+						<h1 id="projectTitle"> {{projectInfo.title}} </h1>
 						<div id="projectAdditionalInformation">
 							<ul>
 								<div id="projectFrontEnd">
