--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 		<!-- Contact Section -->
 		<div id="contactInfo">
 			<i class="fa fa-envelope-o fa-2x"> </i>
-			<p>Come say hi! These projects are constantly in development and I'd appreciate any feedback.</p>
-			<p id="gmailTagLine">crumrinecoding at gmail dot com </p>
+			<h1 id="contactInfoHeader">Make a new connection: </h1>
+			<a id="emailButton" href="mailto:crumrinecoding@gmail.com">Email Me</a>
 
 		</div>
 
