--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<!-- Contact Section -->
 		<div id="contactInfo">
 			<i class="fa fa-envelope-o fa-2x"> </i>
-			<h1 id="contactInfoHeader">Wanna hang out?</h1>
+			<h1>Let's start</h1><h3> a new project together</h3>
 			<a id="emailButton" href="mailto:crumrinecoding@gmail.com">Email Me</a>
 		</div>
 
