Video resize, linkedin

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/" title="LinkedIn" target="_blank">
+				<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/" title="link" target="_blank">
 					<!--			<img src="Images/linkedinWhite.png" width="42" height="42" border="0"> -->
 					<i class="fab fa-linkedin-in navIcon" border="0"></i>
 				</a>
