--- a/index.html
+++ b/index.html
@@ -70,15 +70,11 @@
 	</nav>
 	<div id="aboutMeOverlay" onclick="off()">
 		<div id="aboutMeText">
-			<h2>Hi, I'm Nicolas Crumrine and I make websites.</h2> I currently use HTML5, CSS3, Javascript, Angular, Express.JS and Node.JS
-			and am working to learn Sass and other languages. I enjoy identifying, understanding, and tinkering with patterns. I like
-			reading history, Russian literature, sci-fi, and Terry Prachett, doodling, listening to rock operas and western ballads,
-			playing piano, and collaborative storytelling when I'm not building websites.
-			<br>
-			<br> Visit a few of my projects and email me if you like what you see. I hope I can help.
-			<br>
-			<br>
-			<u>Click anywhere to return to safety </u>
+			<h2>Hi, I'm Nicolas Crumrine and I make websites.</h2> 
+			<p>I use JavaScript (ES6), React.js, Angular.js, Node.js, Express.js, HTML, CSS3, and SASS. When I'm not building these websites, I'm reading history, philosophy, anthropology, hard Sci-Fi, Terry Prachett, and Russian Literature. I also doodle, play the piano and guitar in an attempt to revive Space Filk (look it up!), and I participate in emergent, collaborative storytelling. What's common to all of my interests is my love for identifying, breaking down, understanding, matching, and tinkering with patterns I find across my hobbies. At the core, I crave a good story.</p>
+			<p>I love Web Development because I have the opportunity to help any industry I find interest in with little to no production cost. However, I utterly despise Web Design that is meant to manipulate users into skinner boxes like Facebook. I hope to build a site like Duolingo where web design is used for helping to keep students engaged. As Hal9000 said, "I am putting myself to the fullest possible use, which is all I think that any conscious entity can ever hope to do." and everyone should have the access and inclination to use the web to pursue their interests no matter where they start in life. The Web allows us to merge industries like never before, which is why I'm not afraid to love so many hobbies.</p>
+			<p>Browse my projects and consult me if you like what you see or if you're interested in my worldview.</p>
+			<u>Click anywhere to return to safety </u>		
 		</div>
 	</div>
 	<!-- Credits for logos -->
