Testing out events

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 			<li id="nameNavContainer">
 				<p id="nic"> Nicolas Crumrine </p>
 				<p id="nicJob"> Web Developer based in NYC
-					<a id="aboutMeButton" href="https://nicolascrumrine.herokuapp.com/#/about" target="_blank">About Me</a>
+					<a id="aboutMeButton" href="https://nicolascrumrine.herokuapp.com/#/about" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'AboutMeBlog');">About Me</a>
 				</p>
 			</li>
 			<li>
-				<a href="https://github.com/CrumrineCoder" id="github" title="Github" target="_blank">
+				<a href="https://github.com/CrumrineCoder" id="github" title="Github" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'Github');">
 					<!--				<img src="Images/githubWhite.png" width="42" height="42" border="0" color="white"> -->
 					<i class="fab fa-github navIcon" border="0"></i>
 				</a>
 			</li>
 			<li>
-				<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/" title="link" target="_blank">
+				<a href="https://www.linkedin.com/in/nicolas-crumrine-50899b120/" title="link" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'LinkedIn');">
 					<!--			<img src="Images/linkedinWhite.png" width="42" height="42" border="0"> -->
 					<i class="fab fa-linkedin-in navIcon" border="0"></i>
 				</a>
 			</li>
 			<li>
-				<a href="mailto:crumrinecoding@gmail.com" title="Email" target="_blank">
+				<a href="mailto:crumrinecoding@gmail.com" title="Email" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'Email');">
 					<!--	<img src="Images/codepenWhite.png" width="42" height="42" border="0"> -->
 					<i class="fas fa-envelope navIcon" border="0"></i>
 				</a>
