Fixed event tracking

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114290573-1"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-		gtag('config', 'UA-114290573-1');
+		ga('create', 'UA-114290573-1', 'auto');
+		ga('send', 'pageview');
 	</script>
-
 
 	<title>Nicolas Crumrine</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +46,8 @@
 			<li id="nameNavContainer">
 				<p id="nic"> Nicolas Crumrine </p>
 				<p id="nicJob"> Web Developer based in NYC
-					<a id="aboutMeButton" href="https://nicolascrumrine.herokuapp.com/#/about" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'AboutMeBlog');">About Me</a>
+					<a id="aboutMeButton" href="https://nicolascrumrine.herokuapp.com/#/about" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'AboutMeBlog');">About
+						Me</a>
 				</p>
 			</li>
 			<li>
@@ -87,7 +89,8 @@
 	<!-- Initial/Splash page -->
 	<div id="splash">
 		<span id="removeMargin" ng-repeat="project in buttons | limitTo:5">
-			<button type="image" ng-click="change(project.id)" ng-style="{'background-color': project.color}" style="position: relative;" onclick="ga('send', 'event', 'Portfolio', 'Click', 'Landing');">
+			<button type="image" ng-click="change(project.id)" ng-style="{'background-color': project.color}" style="position: relative;"
+			 onclick="ga('send', 'event', 'Portfolio', 'Click', 'AboutMeBlog');">
 				<img ng-src={{project.logo}} class="projectSelectImage" ng-style="{'background-color': project.color}">
 				<p class="splashText"> {{project.title}} </p>
 			</button>
