UX name change for hover

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<i id="toggleOverlayButtonIcon" class="fas fa-chevron-down"></i>
 		</button>
 		<div id="overlayText" class="shownOverlay">
-			<h4><i>Preview</i></h4>
+			<h4><i>Project Hover Preview</i></h4>
 			<h1 id="overlayTitle"> {{previewInfo.title}} </h1>
 			<ul>
 				<div id="overlayFrontEnd">
