Splash page gone

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		 </ul>
 	</div> -->
 	<!-- Initial/Splash page -->
-	<div id="splash">
+<!--	<div id="splash">
 		<span id="removeMargin" ng-repeat="project in buttons | limitTo:5">
 			<button type="image" ng-click="change(project.id)" ng-style="{'background-color': project.color}" style="position: relative;"
 			 onclick="ga('send', 'event', 'Portfolio', 'Click', 'Landing');">
@@ -96,7 +96,7 @@
 				<p class="splashText"> {{project.title}} </p>
 			</button>
 		</span>
-	</div>
+	</div> -->
 
 	<div id="overlay" class="hiddenOverlay">
 		<button id="toggleOverlayButton" onclick="toggleOverlay()">
