--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		ga('create', 'UA-114290573-1', 'auto');
 		ga('send', 'pageview');
 	</script>
-
-	<title>Nicolas Crumrine</title>
+	<title>Nicolas Crumrine - NYC-based Front End Web Developer</title>
+	<meta name="description" content="Project portfolio demonstrating knowledge in JavaScript, React.JS, Redux.JS, Express.js, Node.js, AngularJS, MongoDB, UI development and UX research, and more. I do Web Development and Design services, and I give free consultations. Inside are links to my Email, Blog (dev diaries and case studies), LinkedIn, and Github.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css.css" />
@@ -45,7 +45,7 @@
 		<ul>
 			<li id="nameNavContainer">
 				<p id="nic"> Nicolas Crumrine </p>
-				<p id="nicJob">React.JS Web Developer based in NYC
+				<p id="nicJob">Front End Web Developer based in NYC
 					<a id="aboutMeButton" href="https://nicolascrumrine.herokuapp.com/#/about" target="_blank" onclick="ga('send', 'event', 'Nav', 'Click', 'AboutMeBlog');">About
 						Me
 					</a>
